# fabulous

./: LICENSE  README.md
absolute/: absolute.py  billing.py  genbank.py  humanize.py  main.py  pyproject.toml
absolute/absolute/: pyvenv.cfg
absolute/absolute/Scripts/: abstar  activate  activate.bat  basespace_downloader  batch_mongoimport  build_abstar_germline_db  dnachisel  make_basespace_credfile  sample-sheet
absolute/absolute/documentation/: API_documentation.md
absolute/absolute/refs/: CH1.fasta  CH2.fasta  CH3.fasta  CH4.fasta  CL1.fasta  H.fasta  L.fasta  L1.fasta
fabulous/: index.html  package-lock.json  package.json  pnpm-lock.yaml
fabulous/src/: App.css  App.tsx
fabulous/src/components/: About.css  About.tsx  HowItWorks.tsx  Logo.tsx  Searchbox.tsx
fabulous/src/components/searchResults/: FullLengthSequences.tsx  GeneUsage.tsx  GeneUsage.tsx.bak  Overview.tsx  RegionsAndSequences.tsx  SearchResults.tsx
